grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.program,
          $.commented_program_scope,
          $.apply_statement,
          $.sys_statement,
          $._module_tail_statement,
        ),
      ),

    program: ($) =>
      prec.right(
        seq(
          field("header", $.program_header),
          field("body", $.input_block),
          repeat(field("tail", $._module_tail_statement)),
        ),
      ),

    program_header: ($) =>
      seq(
        field("sigil", $.program_sigil),
        field("module", choice($.module_name, $.invalid_module)),
        repeat(field("option", $.program_option)),
        $._record_end,
      ),

    program_sigil: ($) => choice(ci("PROG"), token(prec(10, /[+-][pP][rR][oO][gG]/))),

    commented_program_header: ($) =>
      seq(
        field("sigil", $.commented_program_sigil),
        optional(field("module", choice($.module_name, $.invalid_module))),
        repeat(field("option", $.program_option)),
        $._record_end,
      ),

    commented_program_scope: ($) =>
      prec.right(
        seq(
          field("header", $.commented_program_header),
          repeat(field("tail", $._module_tail_statement)),
        ),
      ),

    commented_program_sigil: ($) => $._dollar_prog,

    input_block: ($) =>
      seq(repeat($._program_body), choice($.end_record, $.unterminated_input_block)),

    _program_body: ($) => choice($._nonblank_program_body, $._line_end),

    command: ($) =>
      prec.right(
        seq(
          field("name", $.command_name),
          choice(
            seq(field("record", $.table_definition), repeat(field("record", $.table_row))),
            seq(
              field("record", $.record),
              repeat(
                choice(
                  field("record", $.implicit_record),
                  field(
                    "auxiliary",
                    choice(
                      $.variable_statement,
                      $.preprocessor_directive,
                      $.preprocessor_define_header,
                      $.preprocessor_define_statement,
                    ),
                  ),
                ),
              ),
            ),
          ),
        ),
      ),

    invalid_command_record: ($) =>
      seq(field("name", $.invalid_command), repeat($._separated_value), $._record_end),

    variable_statement: ($) =>
      seq(
        field("keyword", $.variable_keyword),
        field("variable", $.hash_variable),
        repeat(field("value", $._separated_value)),
        $._statement_end,
      ),

    record: ($) => seq(repeat($._record_element), $._record_end),

    _record_element: ($) =>
      choice($.item_sequence, $._value, $._value_separator, $._continued_line),

    item_sequence: ($) =>
      prec.right(seq(field("item", $.item_name), repeat(field("value", $._separated_value)))),

    table_definition: ($) =>
      prec.dynamic(2, seq(repeat1(field("item", $.item_name)), $._record_end)),

    table_row: ($) =>
      seq(
        field("value", $._value),
        repeat(choice($._value_separator, field("value", $._value))),
        $._record_end,
      ),

    apply_statement: ($) =>
      prec.right(
        seq(
          field("sigil", $.apply_sigil),
          repeat(field("argument", $._separated_value)),
          $._statement_end,
        ),
      ),

    apply_sigil: ($) => choice($._dollar_apply, $._apply_sigil),

    sys_statement: ($) =>
      prec.right(
        seq(
          field("sigil", $.sys_sigil),
          repeat(field("argument", $._separated_value)),
          $._statement_end,
        ),
      ),

    sys_sigil: ($) => $._sys_sigil,

    end_record: ($) =>
      prec.right(seq(field("keyword", alias($._end_keyword, $.control_keyword)), $._record_end)),

    loop_block: ($) => seq($.loop_header, repeat($._control_body), $.endloop_record),

    _control_body: ($) =>
      choice(
        $._structured_program_body_start,
        $.invalid_command_record,
        $.orphan_text_end,
        $.orphan_picture_end,
        $.implicit_record,
        $._line_end,
        $.end_record,
      ),

    loop_header: ($) =>
      prec.dynamic(
        10,
        seq(
          field("keyword", alias(ci("LOOP"), $.control_keyword)),
          repeat(field("argument", $._value)),
          $._record_end,
        ),
      ),

    endloop_record: ($) =>
      prec.dynamic(
        10,
        seq(
          field("keyword", alias(ci("ENDLOOP"), $.control_keyword)),
          repeat(field("condition", $._value)),
          $._record_end,
        ),
      ),

    if_block: ($) =>
      seq(
        $.if_header,
        repeat($._control_body),
        repeat(seq($.elseif_header, repeat($._control_body))),
        optional(seq($.else_header, repeat($._control_body))),
        $.endif_record,
      ),

    if_header: ($) =>
      prec.dynamic(
        10,
        seq(
          field("keyword", alias(ci("IF"), $.control_keyword)),
          repeat(field("condition", $._value)),
          $._record_end,
        ),
      ),

    else_header: ($) =>
      prec.dynamic(
        10,
        seq(
          field("keyword", alias(ci("ELSE"), $.control_keyword)),
          repeat(field("condition", $._value)),
          $._record_end,
        ),
      ),

    endif_record: ($) =>
      prec.dynamic(10, seq(field("keyword", alias(ci("ENDIF"), $.control_keyword)), $._record_end)),

    _module_tail_statement: ($) =>
      choice(
        $._structured_program_body_start,
        $.orphan_elseif_record,
        $.orphan_else_record,
        $.orphan_endif_record,
        $.orphan_endloop_record,
        $.orphan_text_end,
        $.orphan_picture_end,
        alias($._module_tail_expansion, $.implicit_record),
        $.end_record,
        $.ignored_text,
        $._line_end,
      ),

    preprocessor_define_header: ($) =>
      seq(
        field("keyword", alias(ci("#DEFINE"), $.preprocessor_keyword)),
        field("name", $.preprocessor_name),
        repeat(field("value", $._separated_value)),
        $._record_end,
      ),

    preprocessor_enddef_record: ($) =>
      prec.right(
        seq(
          field("keyword", alias(ci("#ENDDEF"), $.preprocessor_keyword)),
          optional($._record_end),
        ),
      ),

    cdb_statement: ($) =>
      prec.right(
        seq(
          field("keyword", $.cdb_keyword),
          repeat(field("argument", $._separated_value)),
          $._statement_end,
        ),
      ),

    cdb_keyword: ($) => choice(ci("@KEY"), ci("@CDB")),

    preprocessor_name: ($) => /#?[A-Za-z0-9_][A-Za-z0-9_.-]*/,

    _value: ($) => choice($._non_bare_value, $.bare_value),

    _separated_value: ($) => choice($._value, $._value_separator),

    number: ($) => /[+-]?(?:\d+(?:\.\d*)?|\.\d+)(?:[eE][+-]?\d+)?/,

    hash_variable: ($) =>
      seq(field("name", $.hash_variable_name), optional(field("arguments", $.hash_arguments))),

    hash_arguments: ($) =>
      seq(
        token.immediate("("),
        repeat(
          choice(
            $.parenthesized_expression,
            $.hash_variable,
            $.formatted_value,
            $.dollar_variable,
            $.string,
            $.hash_argument_content,
          ),
        ),
        ")",
      ),

    generic_expression: ($) =>
      token(prec(2, /[^ \t\r\n;!$#@'"\x5b\x5d]*[<>][^ \t\r\n;!$#@'"\x5b\x5d]*/)),

    bare_value: ($) => $._bare_word,

    _statement_end: ($) => $._record_end,

    _record_end: ($) => choice(";", $._line_end, $._end_of_file),
