test/corpus/programs.txt
==================
Program and command
==================
+PROG SOFIMSHA
NODE 1 X 0 Y 0 Z 0
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (command
        name: (command_name)
        record: (record
          (number)
          (item_sequence
            item: (item_name)
            value: (number))
          (item_sequence
            item: (item_name)
            value: (number))
          (item_sequence
            item: (item_name)
            value: (number))))
      (end_record
        keyword: (control_keyword)))))

====================================
Single input block and program tail
====================================
+PROG AQUA
HEAD body
END
ordinary prose
NODE 1
KOPF tail
END
+PROG ASE
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)))
      (end_record
        (control_keyword)))
    (ignored_text)
    (ignored_text)
    (command
      (command_name)
      (record
        (bare_value)))
    (end_record
      (control_keyword)))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword)))))

=============================================
Root directive words stay values inside records
=============================================
+PROG AQUA
HEAD analysis without +apply or APPLY and SYS and PROG ASE
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)
          (bare_value)
          (bare_value)
          (bare_value)
          (bare_value)
          (bare_value)
          (bare_value)
          (bare_value)
          (bare_value)
          (bare_value)))
      (end_record
        (control_keyword)))))

=============================================
Template controls precede invalid command records
=============================================
+PROG TEMPLATE
KOPF Universal heading
IF #A > 0
WHATEVER 1
ELSE
OTHER 2
ENDIF
LOOP 2
CUSTOM 3
ENDLOOP
LET#RESULT 4
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (command
        (command_name)
        (record
          (bare_value)
          (bare_value)))
      (if_block
        (if_header
          (control_keyword)
          (hash_variable
            (hash_variable_name))
          (generic_expression)
          (number))
        (invalid_command_record
          (invalid_command)
          (number))
        (else_header
          (control_keyword))
        (invalid_command_record
          (invalid_command)
          (number))
        (endif_record
          (control_keyword)))
      (loop_block
        (loop_header
          (control_keyword)
          (number))
        (invalid_command_record
          (invalid_command)
          (number))
        (endloop_record
          (control_keyword)))
      (variable_statement
        (variable_keyword)
        (hash_variable
          (hash_variable_name))
        (number))
      (end_record
        (control_keyword)))))

==================================
Apply and SYS keep unknown tail text neutral
==================================
+PROG TEMPLATE
END
CUSTOM before
+APPLY first.dat
CUSTOM after apply
+PROG TEMPLATE
END
CUSTOM before
SYS echo done
CUSTOM after sys
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword)))
    (ignored_text))
  (apply_statement
    (apply_sigil)
    (bare_value))
  (ignored_text)
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword)))
    (ignored_text))
  (sys_statement
    (sys_sigil)
    (bare_value)
    (bare_value))
  (ignored_text))

========================================
Transparent tail belongs to real program
========================================
+PROG AQB
END
#DEFINE aqblcs
LC 1
LC 2
LC 3
#ENDDEF
+PROG AQUA
END
---

(source_file
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword)))
    (preprocessor_define_header
      (preprocessor_keyword)
      (preprocessor_name))
    (command
      (command_name)
      (record
        (number)))
    (command
      (command_name)
      (record
        (number)))
    (command
      (command_name)
      (record
        (number)))
    (preprocessor_enddef_record
      (preprocessor_keyword)))
  (program
    (program_header
      (program_sigil)
      (module_name))
    (input_block
      (end_record
        (control_keyword)))))

============================================
Dollar program scopes include their full tail
============================================
$PROG ASE
#DEFINE ASE_CTRL
PAGE UNII 0
#ENDDEF
$PROG AQB
#DEFINE AQB_CTRL
PAGE UNII 0
#ENDDEF
---

(source_file
  (commented_program_scope
    (commented_program_header
      (commented_program_sigil)
      (module_name))
    (preprocessor_define_header
      (preprocessor_keyword)
      (preprocessor_name))
    (command
      (command_name)
      (record
        (item_sequence
          (item_name)
          (number))))
    (preprocessor_enddef_record
      (preprocessor_keyword)))
  (commented_program_scope
    (commented_program_header
      (commented_program_sigil)
      (module_name))
    (preprocessor_define_header
      (preprocessor_keyword)
      (preprocessor_name))
    (command
      (command_name)
      (record
        (item_sequence
          (item_name)
          (number))))
    (preprocessor_enddef_record
      (preprocessor_keyword))))

==============================
Item and enum-like name collision
==============================
+PROG ASE
GRP VAL NO
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (command
        name: (command_name)
        record: (table_definition
          item: (item_name)
          item: (item_name)))
      (end_record
        keyword: (control_keyword)))))

===========================
Enum-looking TENDON values
===========================
+PROG TENDON
AXES KIND QUAD
AXES VAL3 11 QUAD
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (command
        name: (command_name)
        record: (record
          (item_sequence
            item: (item_name)
            value: (bare_value))))
      (command
        name: (command_name)
        record: (record
          (item_sequence
            item: (item_name)
            value: (number)
            value: (bare_value))))
      (end_record
        keyword: (control_keyword)))))

================
Table records
================
+PROG SOFIMSHA
NODE NO X Y Z
1 0 0 0
2 1 0 0
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (command
        name: (command_name)
        record: (table_definition
          item: (item_name)
          item: (item_name)
          item: (item_name)
          item: (item_name))
        record: (table_row
          value: (number)
          value: (number)
          value: (number)
          value: (number))
        record: (table_row
          value: (number)
          value: (number)
          value: (number)
          value: (number)))
      (end_record
        keyword: (control_keyword)))))

==========================
Invalid contextual names
==========================
+PROG AQUA
HEAD title
NODE 1
KOPF tail
END
+PROG UNKNOWN
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (command
        name: (command_name)
        record: (record
          (bare_value)))
      (invalid_command_record
        name: (invalid_command)
        (number))
      (command
        name: (command_name)
        record: (record
          (bare_value)))
      (end_record
        keyword: (control_keyword))))
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (invalid_module))
    body: (input_block
      (end_record
        keyword: (control_keyword)))))

===================================
Missing END before the next program
===================================
+PROG AQUA
HEAD first
+PROG ASE
HEAD second
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (command
        name: (command_name)
        record: (record
          (bare_value)))
      (unterminated_input_block)))
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (command
        name: (command_name)
        record: (record
          (bare_value)))
      (end_record
        keyword: (control_keyword)))))

====================================
Tail loop with an attached counter
====================================
+PROG ASE
END
LOOP#i ASE_ITER ; STO#iter50(#i) #ASE_ITER(#i) ; ENDLOOP
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (end_record
        keyword: (control_keyword)))
    tail: (loop_block
      (loop_header
        keyword: (control_keyword)
        argument: (hash_variable
          name: (hash_variable_name))
        argument: (bare_value))
      (variable_statement
        keyword: (variable_keyword)
        variable: (hash_variable
          name: (hash_variable_name)
          arguments: (hash_arguments
            (hash_variable
              name: (hash_variable_name))))
        value: (hash_variable
          name: (hash_variable_name)
          arguments: (hash_arguments
            (hash_variable
              name: (hash_variable_name)))))
      (endloop_record
        keyword: (control_keyword)))
    tail: (end_record
      keyword: (control_keyword))))

=================================
Semicolon commands in module tail
=================================
+PROG STAR2
END
CTRL I ; GRP 2 ; LC 200 FACT 1.0 ; LCC 2 ; END
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (end_record
        keyword: (control_keyword)))
    tail: (command
      name: (command_name)
      record: (record
        (bare_value)))
    tail: (command
      name: (command_name)
      record: (record
        (number)))
    tail: (command
      name: (command_name)
      record: (record
        (number)
        (item_sequence
          item: (item_name)
          value: (number))))
    tail: (command
      name: (command_name)
      record: (record
        (number)))
    tail: (end_record
      keyword: (control_keyword))
    tail: (end_record
      keyword: (control_keyword))))

==============================================
Typed table values after an intermediate END
==============================================
+PROG SIR
END
SECT NO XS XM
2 0.0 -1.5
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (end_record
        keyword: (control_keyword)))
    tail: (command
      name: (command_name)
      record: (table_definition
        item: (item_name)
        item: (item_name)
        item: (item_name))
      record: (table_row
        value: (number)
        value: (number)
        value: (number)))
    tail: (end_record
      keyword: (control_keyword))))

=======================
Invalid template records
=======================
+PROG TEMPLATE
GRP2 A B C
asdasdasdas 1
@KEY VALUE
END
---

(source_file
  (program
    header: (program_header
      sigil: (program_sigil)
      module: (module_name))
    body: (input_block
      (invalid_command_record
        name: (invalid_command)
        (bare_value)
        (bare_value)
        (bare_value))
      (invalid_command_record
        name: (invalid_command)
        (number))
      (cdb_statement
        keyword: (cdb_keyword)
        argument: (bare_value))
      (end_record
        keyword: (control_keyword)))))
